--- a/.github/workflows/netlify.yml
+++ b/.github/workflows/netlify.yml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Deploy to Netlify
-        uses: netlify/actions/deploy@v1
+        uses: netlify/actions/cli@master
         with:
           token: ${{ secrets.NETLIFY_TOKEN }}
           siteId: ${{ secrets.NETLIFY_SITE_ID }}
