--- a/.github/workflows/netlify.yml
+++ b/.github/workflows/netlify.yml
@@ -14,6 +14,8 @@ jobs:
 
       - name: Deploy to Netlify
         uses: netlify/actions/cli@master
+        env:
+          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_TOKEN }}
+          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
         with:
-          token: ${{ secrets.NETLIFY_TOKEN }}
-          siteId: ${{ secrets.NETLIFY_SITE_ID }}
+          args: deploy --dir=db --prod
