--- a/.github/workflows/netlify.yml
+++ b/.github/workflows/netlify.yml
@@ -18,4 +18,4 @@ jobs:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_TOKEN }}
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
         with:
-          args: deploy --dir=db --prod
+          args: deploy --dir=. --prod
