--- a/.github/workflows/netlify.yml
+++ b/.github/workflows/netlify.yml
@@ -12,7 +12,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Deploy to Netlify
+      - name: Test application before deploy
+        run: echo 'running test...'
+
+      - name: Deployment system
         uses: netlify/actions/cli@master
         env:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_TOKEN }}
